[package]
name = "puzzle_game"
version = "0.1.0"
authors = ["Lars Kue <lars@kuehmichel.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# piston = "0.49.0"
piston_window = "0.107.0"
gfx_device_gl = "0.16.2"
serde = {version = "^1.0.104", features = ["derive"]}
toml = "^0.5.6"